[version "0.1.59"]
date = Mon Dec  5 12:48:48 PM PST 2022
done = Fix config

[version "0.1.58"]
date = Mon Dec  5 10:49:25 AM PST 2022
done = Change package.repo to package.owner

[version "0.1.57"]
date = Sun Nov 20 12:35:35 PM PST 2022
done = Limit +source to BASHPLUS_PATH or local .bpan/lib

[version "0.1.56"]
date = Sat Nov 19 10:53:26 AM PST 2022
done = Add +str:repeat
done = Move Meta file to .bpan/config

[version "0.1.55"]
date = Sat Nov 19 09:07:12 AM PST 2022
done = Add str.bash

[version "0.1.54"]
date = Thu Nov 17 09:58:40 PM PST 2022
done = Add tag to Meta

[version "0.1.53"]
date = Thu Nov 17 09:56:16 PM PST 2022
done = New BPAN config format

[version "0.1.52"]
date = Thu Nov 17 09:46:18 PM PST 2022
done = Allow optional 2nd arg 'remote' for +git:tag-pushed

[version "0.1.51"]
date = Fri Nov 11 10:07:03 AM PST 2022
done = Change source bashplus --foo to +foo

[version "0.1.50"]
date = Fri Nov 11 06:46:32 AM PST 2022
done = Avoid unnecessary subshell functions

[version "0.1.49"]
date = Fri Nov 11 06:18:11 AM PST 2022
done = Finish fun -> func refactor

[version "0.1.48"]
date = Fri Nov 11 05:52:08 AM PST 2022
done = Add a +time:stamp function
done = Rename bashplus/fun to bashplus/func
done = Add ::FUNC-NAME:: support to bashplus/fun

[version "0.1.47"]
date = Wed Nov  9 10:03:54 AM PST 2022
done = Add +time:ymd for yyyy-mm-dd date string
done = Syntax tweak

[version "0.1.46"]
date = Sun Nov  6 11:33:43 AM PST 2022
done = Support BASHPLUS_DEBUG_BASH_X

[version "0.1.45"]
date = Wed Nov  2 03:01:23 PM PDT 2022
done = Implement +stack-trace and use in die and error

[version "0.1.44"]
date = Wed Nov  2 11:04:10 AM PDT 2022
done = Simplfy +source

[version "0.1.43"]
date = Sun Oct 30 01:25:20 PM PDT 2022
done = Fix a wording bug in the 'error' function

[version "0.1.42"]
date = Sun Oct 30 01:13:23 PM PDT 2022
done = Fix bugs in 'error' function from refactor

[version "0.1.41"]
date = Sun Oct 30 12:56:01 PM PDT 2022