@@ -133,7 +133,7 @@
 .\" ========================================================================
 .\"
 .IX Title "STDIN 1"
-.TH "bashplus" 3 "2022-12-05" "md2man v0.1.0" "A Collection of Useful Bash Functions"
+.TH "bashplus" 3 "2022-12-09" "md2man v0.1.0" "A Collection of Useful Bash Functions"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
