@@ -1,3 +1,7 @@
+[version "0.1.60"]
+date = Thu Dec  8 05:50:09 PM PST 2022
+done = Change config to '[author "github:ingydotnet"]'
+
 [version "0.1.59"]
 date = Mon Dec  5 12:48:48 PM PST 2022
 done = Fix config
